--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
                 <a href="#" class="btn">Hire Me Now</a>
             </div>
         </div>
+
         <div class="home-img">
             <img src="assets/my.jpg" alt="">
+        </div>
         </div>
     </section>
 
