--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <a href="#" class="logo"><span>Muhammad</span> Asaif</a>
+        <a href="#" class="logo"><span>M.</span> Asaif</a>
         <ul class="navbar">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
@@ -48,7 +48,7 @@
             </p>
             <div class="main-btn">
                 <a href="#" class="btn">Download CV</a>
-                <a href="#" class="btn">Hire Me Now</a>
+                <a href="#" class="btn two">Hire Me Now</a>
             </div>
         </div>
 
