--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
             <img src="assets/my.jpg" alt="">
         </div>
         </div>
+        <div class="share">
+            <p>Check out my:</p>
+            <div class="social">
+                <a href="#"><i class="bx bxl-linkedin"></i></a>
+                <a href="#"><i class='bx bxl-medium-square'></i></a>
+            </div>
+        </div>
     </section>
+
 
     <script src="script.js"></script>
 
