--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="share">
             <p>Check out my:</p>
             <div class="social">
-                <a href="#"><i class="bx bxl-linkedin"></i></a>
-                <a href="#"><i class='bx bxl-medium-square'></i></a>
+                <a href="https://www.linkedin.com/in/m-asaif-asif/"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://saif7995.medium.com"><i class='bx bxl-medium-square'></i></a>
             </div>
         </div>
     </section>
